# witty_plus2

./: CMakeLists.txt  README  TODO.txt  main.cpp  todo.txt
app/: App.cpp  App.hpp  CMakeLists.txt  Server.cpp  Server.hpp  UserSession.cpp  UserSession.hpp  db.hpp
app-builder/: CMakeLists.txt  argParser.cpp  argParser.hpp  configurator.cpp  configurator.hpp  main.cpp
app-template/: CMakeLists.txt  main.cpp
app-template/cmake/: dependencies.cmake  settings.cmake
app-template/compass/: config.rb
app-template/config/: CMakeLists.txt
cmake/: dependencies.cmake  settings.cmake
config/: wt-config.xml
model/: CMakeLists.txt
models/: CMakeLists.txt  User.cpp  User.hpp
tests/: CMakeLists.txt
widgets/: AuthWidget.cpp  AuthWidget.hpp  CMakeLists.txt
wittyPlus/: CMakeLists.txt  empty.cpp
wittyPlus/app/: App.cpp  App.hpp  CMakeLists.txt  Server.hpp  UserSession.cpp  UserSession.hpp  db.cpp  db.hpp
wittyPlus/models/: CMakeLists.txt
wittyPlus/widgets/: AuthWidget.hpp  CMakeLists.txt
